# monadster

./: .ghci  .ghci.hs  LICENSE  README  README.md  monadster.cabal
app/: Main.hs
src/Monadster/: Lib.hs  Main.hs
test/: Spec.hs
