name:                monadster
version:             0.1.0.1
synopsis:            A haskell implementation of: https://fsharpforfunandprofit.com/posts/monadster/
description:         Please see README.md
homepage:            https://github.com/githubuser/monadster#readme
license:             MIT
license-file:        LICENSE
author:              Eric D. White
maintainer:          eric@ericwhite.ca
copyright:           Eric D. White 2015-2016
category:            Study
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Monadster.Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable monadster
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monadster
  default-language:    Haskell2010

test-suite monadster-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , monadster
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ericdwhite/monadster 
